# PDFReader-Workbench

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
scripts/: install-export-tools.cmd  install-export-tools.ps1
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts  vendor-modules.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/tools/: README.md
src-tauri/src/: lib.rs  main.rs  native_pdf_export_windows.rs
src-tauri/windows/: nsis-hooks.nsh
src/components/agent/: AgentPane.tsx
src/components/common/: ToastViewport.tsx
src/components/files/: FileSidebar.tsx
src/components/markdown/: MarkdownPreview.tsx  RichMarkdown.tsx
src/components/notes/: NotesPane.tsx
src/components/pdf/: PdfPane.tsx
src/components/settings/: SettingsPanel.tsx
src/hooks/: useAutoClearMessage.ts  useBackdropClose.ts
src/services/: appSettingsService.ts  beginnerGuide.ts  commandService.ts  debugLogger.ts  llmService.ts  markdownNormalizeService.ts  markdownPreviewService.ts  markdownPrintService.ts  nativeFileService.ts  ocrService.ts  projectService.ts  workspaceService.ts
src/stores/: appStore.ts  toastStore.ts
src/utils/: selectionMarkdown.ts  textDisplay.ts
